110
- Rewrite add-on from scratch
- Add support for APPS, SETUP and CVBS indicators.
- Add a configuration dialog:
    * Adjust display brightness.
    * Storage access indication.
    * Advanced hardware configuration of the display.
- Fix crash if aml_fd628 module is not loaded (led_on, led_off files don't exist)
- Fix disable add-on from Kodi UI.
- Turn off indicators when add-on is disabled.

100
- Initial add-on