@@ -7,12 +7,13 @@
 		<setting label="30014" type="labelenum" id="display.storage.indicator.icon" lvalues="30025|30015|30016|30017|30018|30019|30020|30021|30022|30023|30024" default="30025" visible="eq(-3,true) + eq(-1,true)" subsetting="true" />
 		<setting label="30003" type="bool" id="display.advanced" default="false" visible="eq(-4,true)" />
 		<setting label="30004" type="enum" id="display.type" values="0|1|2|3|4|5|6" default="1" visible="eq(-5,true) + eq(-1,true)" subsetting="true" />
-		<setting type="lsep" label="30012" visible="eq(-6,true) + eq(-2,true)" />
-		<setting label="30005" type="enum" id="display.char.index0" values="0|1|2|3|4|5|6" default="0" visible="eq(-7 ,true) + eq(-3,true)" subsetting="true" />
-		<setting label="30006" type="enum" id="display.char.index1" values="0|1|2|3|4|5|6" default="1" visible="eq(-8 ,true) + eq(-4,true)" subsetting="true" />
-		<setting label="30007" type="enum" id="display.char.index2" values="0|1|2|3|4|5|6" default="2" visible="eq(-9 ,true) + eq(-5,true)" subsetting="true" />
-		<setting label="30008" type="enum" id="display.char.index3" values="0|1|2|3|4|5|6" default="3" visible="eq(-10,true) + eq(-6,true)" subsetting="true" />
-		<setting label="30009" type="enum" id="display.char.index4" values="0|1|2|3|4|5|6" default="4" visible="eq(-11,true) + eq(-7,true)" subsetting="true" />
+		<setting label="30026" type="bool" id="display.common.anode" default="false" visible="eq(-6,true) + eq(-2,true)" subsetting="true" />
+		<setting type="lsep" label="30012" visible="eq(-7,true) + eq(-3,true)" />
+		<setting label="30005" type="enum" id="display.char.index0" values="0|1|2|3|4|5|6" default="0" visible="eq(-8 ,true) + eq(-4,true)" subsetting="true" />
+		<setting label="30006" type="enum" id="display.char.index1" values="0|1|2|3|4|5|6" default="1" visible="eq(-9 ,true) + eq(-5,true)" subsetting="true" />
+		<setting label="30007" type="enum" id="display.char.index2" values="0|1|2|3|4|5|6" default="2" visible="eq(-10,true) + eq(-6,true)" subsetting="true" />
+		<setting label="30008" type="enum" id="display.char.index3" values="0|1|2|3|4|5|6" default="3" visible="eq(-11,true) + eq(-7,true)" subsetting="true" />
+		<setting label="30009" type="enum" id="display.char.index4" values="0|1|2|3|4|5|6" default="4" visible="eq(-12,true) + eq(-8,true)" subsetting="true" />
 		<setting label="30010" type="enum" id="display.char.index5" values="0|1|2|3|4|5|6" default="5" visible="false" subsetting="true" />
 		<setting label="30011" type="enum" id="display.char.index6" values="0|1|2|3|4|5|6" default="6" visible="false" subsetting="true" />
     </category>
